--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,10 @@ th,td{
 	color:#fff;
 	height: 30px;
 	padding: 0 20px;
-	border: 0;
-	cursor: pointer;  
+	border: 0.1px solid #555;
 }
+
+
 .space{
 	padding-right: 30px;
 }
